--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blog",
   "type": "module",
-  "version": "2.6.0",
+  "version": "2.7.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -16,6 +16,7 @@
     "@astrojs/sitemap": "^3.2.0",
     "@astrojs/tailwind": "^5.1.2",
     "@astrojs/vercel": "^7.8.1",
+    "@notionhq/client": "^2.2.15",
     "@playform/compress": "^0.1.4",
     "@swup/astro": "^1.4.1",
     "@swup/parallel-plugin": "^0.4.0",
@@ -27,6 +28,7 @@
     "dayjs": "^1.11.13",
     "hastscript": "^9.0.0",
     "katex": "^0.16.11",
+    "marked": "^14.1.3",
     "mdast-util-to-string": "^4.0.0",
     "medium-zoom": "^1.1.0",
     "pagefind": "^1.1.1",
